// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the type is private 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4c6978;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_2_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        aria-label="Private"
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a3 3 0 0 1 3 3v2a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2V4a3 3 0 0 1 3-3ZM5 7a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H5Zm3 2.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM8 2a2 2 0 0 0-2 2v2h4V4a2 2 0 0 0-2-2Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is public 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4c6978;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        aria-label="Public"
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12ZM8 3c.37 0 .88.36 1.31 1.32.1.2.18.43.26.68H6.43c.08-.25.16-.47.26-.68C7.12 3.36 7.63 3 8 3Zm-2.22.9c-.15.34-.29.7-.4 1.1H4a5.02 5.02 0 0 1 2.04-1.6c-.1.16-.18.33-.26.5ZM5.16 6a12.06 12.06 0 0 0 0 4H3.42a4.98 4.98 0 0 1 0-4h1.74Zm.22 5a7.53 7.53 0 0 0 .66 1.6A5.02 5.02 0 0 1 4 11h1.38Zm1.05 0h3.14a6.2 6.2 0 0 1-.26.68C8.88 12.64 8.37 13 8 13c-.37 0-.88-.36-1.31-1.32a6.2 6.2 0 0 1-.26-.68Zm3.4-1H6.17a10.94 10.94 0 0 1 0-4h3.64a10.94 10.94 0 0 1 0 4Zm.79 1H12a5.02 5.02 0 0 1-2.04 1.6c.1-.16.18-.33.26-.5.15-.34.29-.7.4-1.1Zm1.96-1h-1.74a12.05 12.05 0 0 0 0-4h1.74a4.98 4.98 0 0 1 0 4ZM9.96 3.4c.81.35 1.52.9 2.04 1.6h-1.38a7.53 7.53 0 0 0-.66-1.6Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is undefined 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_4_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    />
  </div>
</DocumentFragment>
`;
